Quick Fact Blocks Widget - prevent line breaking with whitespace: nowrap

--- a/app/assets/stylesheets/widgets/primary_column/quick_fact_blocks.scss
+++ b/app/assets/stylesheets/widgets/primary_column/quick_fact_blocks.scss
@@ -12,6 +12,7 @@
   &__text {
     font-weight: bold;
     max-width: 150px;
+    white-space: nowrap;
 
     .fas,
     [class*="-fa"] {
